syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.fmchagas.key_manager_grpc.grpc";
//option java_outer_classname = "KeyManagerPix";

package br.com.fmchagas.key_manager_grpc.grpc;
import "google/protobuf/timestamp.proto";

service NovaChavePixService{
  rpc registrar(NovaChavePixRequest) returns (NovaChavePixResponse){}
}

message NovaChavePixRequest{
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chaveDoPix = 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse{
  string pixId = 1;
}

enum TipoChave{
  UN_KNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  TEL_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta{
  UN_KNOWN_TIPO_CONTA = 0;
  POUPANCA = 1;
  CORRENTE = 2;
}

/* Remover */
service RemoveChavePixService{
  rpc remover(RemoveChavePixRequestGrpc) returns (RemoveChavePixResponseGrpc){}
}

message RemoveChavePixRequestGrpc{
  string clienteId = 1;
  string pixId = 2;
}
message RemoveChavePixResponseGrpc{
  string mensagem = 1;
}

/* Consultar */
service ConsultarChavePixService{
  rpc consulta(ConsultarChavePixRequestGrpc) returns (ConsultarChavePixResponseGrpc){}
}

message ConsultarChavePixRequestGrpc{
  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chavePix = 2;
  }

  message FiltroPorPixId{
    string clienteId = 1;
    string pixId = 2;
  }
}

message ConsultarChavePixResponseGrpc{
  string clienteId = 1;
  string pixId = 2;
  ChavePixGrpc chave = 3;

  message ChavePixGrpc{
    TipoChave tipo = 1;
    string chavePix = 2;
    ContaGrpc conta = 3;
    google.protobuf.Timestamp criadoEm = 4;

    message ContaGrpc{
      TipoConta tipo = 1;
      string instituicao = 2;
      string titular = 3;
      string cpf = 4;
      string agencia = 5;
      string conta = 6;
    }
  }
}

/* Listar */
service ListarChavePixService{
  rpc lista(ListaChavePixRequestGrpc) returns (ListaChavePixResponseGrpc){}
}

message ListaChavePixRequestGrpc{
  string clientId = 1;
}

message ListaChavePixResponseGrpc{
  string clientId = 1;
  repeated ListaChavePixGrpc chaves = 2;

  message ListaChavePixGrpc {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chavePix = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }
}